# NetTap

./: .env.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NetTap_PRD_v1.0.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  cliff.toml  mkdocs.yml
daemon/: main.py  pyproject.toml  requirements.txt
daemon/api/: __init__.py  alerts.py  baseline.py  bridge.py  cyberchef.py  detection_packs.py  devices.py  geoip.py  health_monitor.py  investigations.py  nic_identify.py  reports.py  risk.py  search.py  server.py  settings.py  traffic.py  tshark.py  updates.py
daemon/data/: oui.txt  suricata_descriptions.json
daemon/services/: alert_enrichment.py  bridge_health.py  cyberchef_service.py  detection_packs.py  device_baseline.py  device_fingerprint.py  geoip_service.py  internet_health.py  investigation_store.py  nl_search.py  report_generator.py  risk_scoring.py  traffic_classifier.py  tshark_service.py  update_checker.py  update_executor.py  version_manager.py
daemon/smart/: monitor.py
daemon/storage/: ilm.py  manager.py
daemon/tests/: conftest.py  test_alert_enrichment.py  test_alerts_api.py  test_baseline_api.py  test_bridge_api.py  test_bridge_health.py  test_cyberchef_service.py  test_detection_packs.py  test_detection_packs_api.py  test_device_baseline.py  test_device_fingerprint.py  test_devices_api.py  test_geoip_api.py  test_geoip_service.py  test_internet_health.py  test_internet_health_api.py  test_investigation_store.py  test_investigations_api.py  test_main.py  test_nic_identify.py  (+16 more)
(+268 files in other folders)
