[project]
name = "nettap-daemon"
version = "0.2.0"
description = "NetTap storage & health monitoring daemon"
requires-python = ">=3.11"
dependencies = [
    "opensearch-py>=2.4.0,<4.0",
    "aiohttp>=3.9.0,<4.0",
    "pySMART>=1.3.0,<2.0",
    "psutil>=5.9.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "aioresponses>=0.7",
]
